--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
             android:hardwareAccelerated="true"
             android:launchMode="singleTop" />
 
+        <activity
+            android:name=".activity.WebCommonActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="false"
+            android:hardwareAccelerated="true"
+            android:launchMode="singleTop" />
+
     </application>
 
 </manifest>
